# fast-alloc

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  tsan.supp
.github/workflows/: ci.yaml
benchmarks/: bench_freelist.cpp  bench_pool.cpp  bench_stack.cpp  bench_threadsafe_pool.cpp
docs/: USAGE.md  architecture.md
src/: CMakeLists.txt  freelist_allocator.cpp  freelist_allocator.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h  threadsafe_pool_allocator.cpp  threadsafe_pool_allocator.h
tests/: test_freelist.cpp  test_pool.cpp  test_stack.cpp  test_threadsafe_pool.cpp
